<resources>
    <string name="app_name">EgoProjects</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ego">Ego</string>
    <string name="respect">Respect</string>
    <string name="giving">Giving</string>
    <string name="happines">Happines</string>
    <string name="optimism">Optimism</string>
    <string name="kindness">Kindness</string>
</resources>